5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1675_2473.log
== TEST (2019-05-11 18:23:34) 
-- CODE:
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if ((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076) and not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = ano%19
NameError: name 'ano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:23:53) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if ((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076) and not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 18:23:58) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if ((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076) and not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- EXECUTION TIME:
0.14095
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
ano invalido
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
14 - 4 - 1800
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:24:06) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if ((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076) and not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:24:13) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if ((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076) and not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:24:16) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if ((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076) and not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:24:28) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if ((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076) and not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:25:01) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) and not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:25:39) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 18:25:43) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- EXECUTION TIME:
0.258735
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
ano invalido
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:25:50) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:25:58) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:26:04) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:26:07) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:26:12) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:26:16) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 18:26:33) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<ano<2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- EXECUTION TIME:
0.202845
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
ano invalido
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:26:42) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:26:54) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:27:12) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (((ano==1954) or (ano == 1981) or (ano == 2049) or (ano == 2076)) or not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if 22+d+e > 31:
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:32:16) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if (ano==1954) or (ano ==2049) or (ano ==1981) or (ano == 2076):
		if (22+d+e > 31):
			print(22+d+e - 38, "-", 4, "-", ano)
		else:
			print(22+d+e - 7, "-",3 ,"-",ano)
	elif (22+d+e > 31):
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 18:32:23) 
-- CODE:
ano = int(input("ano: "))
a = ano%19
b = ano%4
c = ano%7
d = (19*a +24)%30
e = (2*b + 4*c + 6*d + 5)%7
if (not(1900<=ano<=2099)):
	print("ano invalido")
else:
	if (ano==1954) or (ano ==2049) or (ano ==1981) or (ano == 2076):
		if (22+d+e > 31):
			print(22+d+e - 38, "-", 4, "-", ano)
		else:
			print(22+d+e - 7, "-",3 ,"-",ano)
	elif (22+d+e > 31):
		print(22+d+e - 31, "-", 4, "-", ano)
	else:
		print(22+d+e, "-",3 ,"-",ano)
-- EXECUTION TIME:
0.148576
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
